# everydollar-cli

./: .gitignore  README.md  pyproject.toml
scripts/: generate_resources.py
src/everydollar_cli/: __init__.py  cli.py  client.py  cookies.py  models.py  session.py
tests/: test_cli.py  test_client.py  test_cookies.py  test_models.py  test_session.py
